@@ -1,5 +1,12 @@
 2008-10-07	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-shutdown-helper.c: Remove the HAVE_DBUS
+	  conditionals when doing HAL operations, since it's not
+	  defined anymore because we require dbus.  This should make
+	  HAL-based shutdown work again.
+
+2008-10-07	Brian Tarricone <bjt23@cornell.edu>
+
 	* configure.in.in: Check for <asm/unistd.h> and
 	  <linux/ioprio.h>.
 	* xfce4-session/xfsm-manager.c: If available, sync() disks
